Fixed awk spacing of Past Events deleted the div and got rid of positioning, not it works

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -42,13 +42,7 @@
 	text-align: center;
 	font-family: 'Raleway', Arial, Helvetica, sans-serif;
 	color: #000;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+	
 }
 
 img.effect-apollo {
